Fix z-index issues on widgets. Thanks a lot to overload for the solution. More details on https://github.com/domogik/domogik/issues/325

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -68,7 +68,7 @@ h3 {
 	-webkit-transition: all .3s ease;
 	-moz-transition: all .3s ease;
 	transition: all .3s ease;
-	z-index: 10;
+	z-index: 1000;
 	overflow-y:auto;
 }
 
